--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "3",
+    "@eslint/js": "^9.27.0",
     "@tailwindcss/postcss": "4",
-    "eslint": "9",
+    "eslint": "^9.27.0",
     "eslint-config-next": "15.3.2",
+    "eslint-plugin-react": "^7.37.5",
+    "globals": "^16.1.0",
     "tailwindcss": "4"
   }
 }
