--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
     "@tailwindcss/postcss": "4",
     "eslint": "^9.27.0",
     "eslint-config-next": "15.3.2",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-prettier": "^5.4.0",
     "eslint-plugin-react": "^7.37.5",
     "globals": "^16.1.0",
+    "prettier": "^3.5.3",
     "tailwindcss": "4"
   }
 }
